syntax = "proto3";
package scalar.protocol.v1beta1;

import "scalar/protocol/v1beta1/types.proto";
import "axelar/evm/v1beta1/types.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/scalarorg/scalar-core/x/protocol/types";

message CreateProtocolRequest {
  string name = 1; // e.g., "protocol-1"
  bytes scalar_pk = 2;
  string service_tag = 3; // e.g., "pools"

  // Btc chain
  string btc_signer_endpoint =
      4; // e.g., "https://protocol.testnet.scalar.org/v1/sign-unbonding-tx"
  string btc_signer_access_token =
      5; // e.g., "616171bb-e71a-4d3f-a4a7-045de8f3cad0"
  string btc_signer_address =
      6; // e.g., "tb1q37dgjm7e7h385aykhd6gps7uqx0kv26w2ugu8c"
  bytes btc_signer_pk =
      7; // e.g.,
         // "0x021387aab21303782b17e760c670432559df3968e52cb82cc2d8f9be43a227d5dc"
  string btc_network = 8; // e.g., "bitcoin-testnet4"

  // Custodian group
  string custodian_group_name = 9; // e.g., "All"

  bool is_custodian_only = 10; // e.g., true
  ProtocolStatus status = 11;  // e.g., PROTOCOL_STATUS_ACTIVATED
}

message CreateProtocolResponse {}

message DeleteProtocolRequest { string protocol_name = 1; }

message DeleteProtocolResponse {}

message UpdateProtocolBasicInfoRequest {
  string protocol_name = 1;
  string service_tag = 2;
}

message UpdateProtocolBasicInfoResponse {}

message SetProtocolStatusRequest {
  string protocol_name = 1;
  ProtocolStatus status = 2;
}

message SetProtocolStatusResponse { Protocol protocol = 1; }

message SetProtocolCustodianGroupRequest {
  string protocol_name = 1;
  string btc_network = 2;
  string custodian_group_name = 3;
}

message SetProtocolCustodianGroupResponse {}

message SetProtocolBtcChainRequest {
  string protocol_name = 1;
  string btc_signer_endpoint = 2;
  string btc_signer_access_token = 3;
  string btc_signer_address = 4;
  bytes btc_signer_pk = 5;
}

message SetProtocolBtcChainResponse {}

message AddDestinationChainToProtocolRequest {
  string protocol_name = 1;
  string chain_name = 2;                  // e.g., "ethereum-sepolia"
  uint64 chain_id = 3;                    // e.g., "11155111"
  string chain_type = 4;                  // Chain type
  bytes chain_smart_contract_address = 5; // Contract address on the chain

  // Fields for ERC20 token
  axelar.evm.v1beta1.ERC20TokenMetadata token = 6
      [ (gogoproto.nullable) = false ];
}

message AddDestinationChainToProtocolResponse {}

message DeleteDestinationChainFromProtocolRequest {
  string protocol_name = 1;
  uint64 chain_id = 2;
  string chain_type = 3;
  bytes chain_smart_contract_address = 4;
}

message DeleteDestinationChainFromProtocolResponse {}

message AddCustodianToCustodianGroupRequest {
  string protocol_name = 1;
  string custodian_group_name = 2;
  string name = 3;
  bytes btc_pk =
      4; // e.g.,
         // "0215da913b3e87b4932b1e1b87d9667c28e7250aa0ed60b3a31095f541e1641488"
  ProtocolStatus status = 5;
  string description = 6;
}

message AddCustodianToCustodianGroupResponse {}

message DeleteCustodianFromCustodianGroupRequest {
  string protocol_name = 1;
  string custodian_group_name = 2;
  string custodian_name = 3;
}

message DeleteCustodianFromCustodianGroupResponse {}

message UpdateCustodianGroupRequest {
  string name = 1;
  string btc_network = 2;
  uint32 quorum = 3;
}

message UpdateCustodianGroupResponse {}

message CreateCustodianRequest {
  string name = 1;
  bytes btc_pk = 2;
  ProtocolStatus status = 3;
  string description = 4;
}

message CreateCustodianResponse {}

message UpdateCustodianRequest {
  string name = 1;
  bytes btc_pk = 2;
  ProtocolStatus status = 3;
  string description = 4;
}

message UpdateCustodianResponse {}

message UpdateBtcChainRequest {
  string protocol_name = 1;
  string btc_signer_endpoint = 2;
  string btc_signer_access_token = 3;
  string btc_signer_address = 4;
  bytes btc_signer_pk = 5;
  string btc_network = 6;
}

message UpdateBtcChainResponse {}